--- a/RoBERTa/Cool_xlm_RoBERTa_4.ipynb
+++ b/RoBERTa/Cool_xlm_RoBERTa_4.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -4810,16 +4809,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/GuillaumeDesa/XLM_RoBERTa_Cool_4/blob/main/RoBERTa/Cool_xlm_RoBERTa_4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!pip install transformers datasets"
@@ -6114,11 +6103,11 @@
         "id": "HYluEHTlgYVZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 17
         },
         "outputId": "4853d6ef-f318-448a-8929-a6384a4e6d7b"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6126,15 +6115,7 @@
             "text/plain": [
               "<IPython.core.display.HTML object>"
             ],
-            "text/html": [
-              "\n",
-              "    <div>\n",
-              "      \n",
-              "      <progress value='829' max='1197' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [ 829/1197 05:42 < 02:32, 2.42 it/s]\n",
-              "    </div>\n",
-              "    "
-            ]
+            "text/html": []
           },
           "metadata": {}
         }
@@ -6156,10 +6137,22 @@
         "print(\"✅ Predictions saved to: cool.unannotated.with_predictions.xlsx\")"
       ],
       "metadata": {
-        "id": "b0mc5HZm8Emi"
+        "id": "b0mc5HZm8Emi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "052ac447-8b5b-4259-e6eb-e39cfd9c85e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Predictions saved to: cool.unannotated.with_predictions.xlsx\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6168,10 +6161,80 @@
         "files.download(\"cool.unannotated.with_predictions.xlsx\")"
       ],
       "metadata": {
-        "id": "L2om9mWc8Omh"
+        "id": "L2om9mWc8Omh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "2c36ee90-abd9-4c67-9093-d73317575a46"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_d3becd5b-4032-4680-acc9-c7a2102248b5\", \"cool.unannotated.with_predictions.xlsx\", 1352239)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6188,7 +6251,7 @@
       "metadata": {
         "id": "YFObh_PE8UMB"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -6204,7 +6267,7 @@
       "metadata": {
         "id": "925UlVCv8bCM"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -6214,10 +6277,22 @@
         "print(\"✅ File updated with prediction scores.\")\n"
       ],
       "metadata": {
-        "id": "NraLnM0U8dXU"
+        "id": "NraLnM0U8dXU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78456be6-58ec-4a9b-be55-401906d1a0e0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ File updated with prediction scores.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -6226,10 +6301,80 @@
         "files.download(\"cool.unannotated.with_predictions.xlsx\")"
       ],
       "metadata": {
-        "id": "ujhuSfch8f5T"
+        "id": "ujhuSfch8f5T",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "6c21c16e-206d-421e-8998-e84874f20e4e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_45142b9a-44f5-47d2-8737-0eff58152052\", \"cool.unannotated.with_predictions.xlsx\", 1660823)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
